<resources>
    <string name="app_name">DevUpdates</string>
    <string name="feed">Feed</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_source">Add Source</string>
    <string name="bookmark_added">Bookmarked added</string>
    <string name="bookmark_removed">Bookmarked removed</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="data_sources">Data Sources</string>
    <string name="drag_text">Drag data sources to get them in order</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="manage_data_sources">Manage Data Sources</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="check_new_updates">Check new updates</string>
    <string name="medium">Medium</string>
    <string name="select_source">Select Source</string>
    <string name="rss">RSS</string>
    <string name="url">URL</string>
    <string name="name">Source name</string>
    <string name="error_invalid_input">Invalid input</string>
    <string name="error_permission_notification">Permission required for sending notifications</string>
    <string name="bottom_navigation_bar">bnb</string>

</resources>
